[package]
name = "crabot"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "postgres"] }
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "crabot"
path = "src/main.rs"
